# Pet-TelecomChurnPrediction

./: .gitignore  README.md  pyproject.toml
notebooks/: Study-TelecomChurnPrediction.ipynb  TelecomChurnPrediction.ipynb
