[project]
name = "study-telecomchurnprediction"
version = "0.1.0"

author = [{ name = "Дмитрий Бервинов" }]

license = { text = "MIT" }
description = "Data Science проект"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "uv>=0.9.7",
]

